# ECS30

./: README.md
Change/: CMakeLists.txt  change.c
Conversions/: CMakeLists.txt  main.c
Paint/: CMakeLists.txt  Paint.c
Polynomial division/: CMakeLists.txt  PolynomialDiv.cpp  PolynomialDiv.h  main.cpp
Read Lines/: read_lines.c
ReadLines/: CMakeLists.txt  main.c  read_lines.h  readlines.h
Vector/: CMakeLists.txt  ConstVectorItr.h  MyVector.h  VectorItr.h  main.cpp
WordCount/: 3-test.txt  4-test.txt  9-test.txt  CMakeLists.txt  wcount.c
